@@ -56,17 +56,16 @@ public class AccountsKeycloakGetUser {
     ) {
 
         URI uri = UriComponentsBuilder
-            .fromUriString(keycloakBaseURL)
-            .pathSegment("admin", "realms", keycloakRealm, "users", idUser)
-            .encode()
-            .build()
-            .toUri();
+        .fromUriString(keycloakBaseURL)
+        .pathSegment("admin", "realms", keycloakRealm, "users", idUser)
+        .build()
+        .toUri();
 
         return webClient.get()
         .uri(uri)
         .header(HttpHeaders.AUTHORIZATION, "Bearer " + clientToken)
         .retrieve()
-        .bodyToMono(Map.class)
+        .bodyToMono(new org.springframework.core.ParameterizedTypeReference<Map<String, Object>>() {})
         .block();
 
     }
@@ -89,7 +88,6 @@ public class AccountsKeycloakGetUser {
                 .pathSegment("admin", "realms", keycloakRealm, "users")
                 .queryParam("email", userEmail.toLowerCase(Locale.ROOT))
                 .queryParam("exact", true)
-                .encode()
                 .build()
                 .toUri();
 
@@ -97,17 +95,14 @@ public class AccountsKeycloakGetUser {
                 .uri(uri)
                 .header(HttpHeaders.AUTHORIZATION, "Bearer " + clientToken)
                 .retrieve()
-                .bodyToMono(List.class)
+                .bodyToMono(new org.springframework.core.ParameterizedTypeReference<List<Map<String, Object>>>() {})
                 .block();
 
-            // If no users found, return null
-            if (users == null || users.isEmpty()) { return null; }
+            if (users == null || users.isEmpty()) {
+                return null;
+            }
 
-            // Extract first user (Keycloak returns list of maps)
-            Map<String, Object> user = (Map<String, Object>) users.get(0);
-
-            // Return userId
-            return (String) user.get("id");
+            return (String) users.getFirst().get("id");
 
         } catch (Exception e) {
 
@@ -115,38 +110,6 @@ public class AccountsKeycloakGetUser {
             logger.atError()
             .addKeyValue("realm", keycloakRealm)
             .log("Error getting user by email in Keycloak [ AccountsKeycloakGetUser.getUserByEmail() ] : ", e);
-
-            throw new DomainException(DomainExceptionEnum.INTERNAL_INSTABILITY);
-
-        }
-
-    }
-
-    // Check if user email is verified by user ID
-    public boolean isAccountVerifiedById(
-
-        String idUser
-
-    ) {
-
-        try {
-
-            String clientToken = accountsKeycloakClientTokenProvider.getAccessToken();
-
-            Map<String, Object> user = getUserById(clientToken, idUser);
-
-            if (user == null || user.isEmpty()) {
-                return false;
-            }
-
-            return Boolean.TRUE.equals(user.get("emailVerified"));
-
-        } catch (Exception e) {
-
-            // Logs
-            logger.atError()
-            .addKeyValue("realm", keycloakRealm)
-            .log("Error checking account email verification in Keycloak [ AccountsKeycloakGetUser.isAccountVerifiedById() ] : ", e);
 
             throw new DomainException(DomainExceptionEnum.INTERNAL_INSTABILITY);
 
